# omega-btc-ai

./: .ENV_backup_terminal.secret  .coveragerc  .dockerignore  .env.example  .env.local  .env.local.bak  .env.scaleway  .env.test  .gitignore  .licenseignore  .report.json  BTC_DATE_DECODER_README.md  CHANGELOG.md  CLI_README.md  CLOUD_DEPLOYMENT.md  COSMIC_COVERAGE_README.md  DEPLOY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.btc-live-feed  Dockerfile.omega-vnc  Dockerfile.omega_portal  Dockerfile.prophecy-core  GBU2_MANIFEST.md  IBR_CLI_README.md  IBR_SPAIN_DIVINE_GRID_ARCHITECTURE.md  INSTAGRAM_K8S_TEST_REPORT.md  LICENSE  MANIFEST.in  MD_TO_MEDIUM_README.md  MM_TRAP_DETECTOR_FIX.md  Makefile  OMEGA_BTC_AI_Article_Prompt.txt  OMEGA_VNC_PORTAL_README.md  P  Pipfile  Procfile  QUANTUM_ARCHITECTURE.md  README.md  README_DUAL_TRADERS.md  (+285 more)
.tmuxinator/: neo-matrix-test.yml
BOOK/: AIXBT_REALTIME_PRICE_FEED.md  ANTI_DEBT_TECH_STRATEGY.md  BTC_LIVE_FEED_V3.md  CHANGELOG.md  CHAPTER_1_THE_DIVINE_ALGORITHM.md  CHAPTER_2_SACRED_DIGITAL_SYSTEMS.md  CLOUD_DEPLOYMENT.html  CLOUD_DEPLOYMENT.md  COSMIC_COVERAGE_README.html  COSMIC_COVERAGE_README.md  COSMIC_COVERAGE_VISUALIZATION.html  COSMIC_COVERAGE_VISUALIZATION.md  COSMIC_ENTRY_REALIZATIONS.md  COSMIC_INTEGRATION.html  DEPLOYMENT_PLAN.md  DIVINE_ENV_LOADER.md  DIVINE_REVERSAL.md  DIVINE_RGB_INTEGRATION.md  DIVINE_SCRIPTS_CATALOG.html  DIVINE_SCRIPTS_CATALOG.md  EMAIL_TO_CURSOR_TEAM.html  EMAIL_TO_CURSOR_TEAM.md  FAUSTO_THE_GOETH_CONTINUED.md  GAUDI_MOZART_SONNET_TRIAD.html  GLOSSARY.md  IBR_SPAIN_INSTAGRAM_INTEGRATION.md  IMAGE_SIGNING_STRATEGY.md  IMMUTABLE_CONTAINER_STRATEGY.md  KUBERNETES_TOKEN_GUIDE.html  KUBERNETES_TOKEN_GUIDE.md  MATRIX_DEVELOPMENT_ROADMAP.md  MATRIX_NEO_NEWS_BLESSING.md  MATRIX_PORTAL_INTEGRATION.md  OFFICIAL_SUMMARY.md  OMEGA_BOTS_BUNDLE_DIVINE_GENESIS.md  OMEGA_DIVINE_SERVICES.html  OMEGA_DIVINE_SERVICES.md  OMEGA_PROMETHEUS_MATRIX.md  OMEGA_QUANTUM_TESTING_MANIFEST.md  OPTIMISTIC_ROLLOUT_STRATEGY.md  (+22 more)
DOCS/: bitget_api_guide.md  bitget_futures_api.yaml  monitoring_suite.md  redis_configuration.md  repository_consolidation.md  run_latest_info.md  runs.md  todo.md  trap_probability_meter.md
NFT/: apply_gbu2_license.py
_archive/: README-V0.md
achievements/: CYBERITAL_TECH_DEBT_V0ID3R.md
charts/: trading_journey_report.md
config/: instagram_config.json  test_redis_config.py
coverage_reports/: divine_dashboard_coverage_2025-04-10_08-13-43.md
cybertruck_components/: exoskeleton_test.py
data/: btc_history_20250325_175149.json  btc_news_20250329_003334.csv  btc_news_20250329_003341.csv  btc_news_20250329_003453.csv  btc_news_20250329_003748.csv  btc_news_20250329_003758.csv  btc_news_20250329_143336.csv  btc_news_20250329_143454.csv  news_integration_20250329_143454.json  schumann_history.csv
debug/: position_component_debug.html
divine_book_browser/: code-stats.html  com.omega.divinebrowser.plist  index.html  server_status.html
divine_book_browser_v2/: README.md  divine_server.py  index.html
divine_dashboard/: README.md  celebrations.html  code-stats.html  divine_server.py  index.html  install_service.sh  run_server.sh  server_status.html
divine_dashboard_v2/: README.html  celebrations.html  code-stats.html  com.omega.divinebrowser.plist  index.html  install_service.sh  run_server.sh  server_status.html
divine_dashboard_v3/: .coveragerc  .huggingface  DNA_PORTAL_README.md  FINAL_BLESSING.md  GRID_PORTAL_README.md  HF_README.md  IBR_SPAIN_TEST_README.md  NFT_TEST_README.md  (+39 more)
src/omega_bot_farm/geospatial/: MANIFEST.in  README.md  ZOROBABEL_TROUBLESHOOTING.md  __init__.py  dem_util.py  install_zorobabel.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_wrapper.py  zorobabel_celebration.py  zorobabel_k1l1.py  zorobabel_ui.py
temp_deployment_package/omega_ai/visualizer/backend/: pyproject.toml  unified_server.py
temp_deployment_package/omega_ai/visualizer/backend/redis-dumps/: sample_data.json
temp_deployment_package/omega_ai/visualizer/backend/src/mm_trap_visualizer/: server.py
temp_deployment_package/omega_ai/visualizer/backend/templates/: qa_dashboard.html
temp_deployment_package/omega_ai/visualizer/backend/tests/: test_websocket_predictive_qa.py
(+6591 files in other folders)
