[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zorobabel-k1l1"
version = "1.0.0"
description = "Sacred Geospatial Visualization System"
readme = "README.md"
authors = [
    {name = "Divine Coders Collective", email = "divine@example.com"}
]
license = {text = "GBU2™ LICENSE - Genesis-Bloom-Unfoldment 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["geospatial", "visualization", "mapping", "divine", "sacred"]
requires-python = ">=3.8"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "pillow>=9.5.0",
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "pyproj>=3.3.0",
    "flask>=2.0.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
]

[project.scripts]
zorobabel = "omega_bot_farm.geospatial.run:main"
zorobabel-install = "omega_bot_farm.geospatial.install_zorobabel:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/omega-btc-ai"
"Bug Tracker" = "https://github.com/yourusername/omega-btc-ai/issues" 