[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mm_trap_visualizer"
version = "0.1.0"
description = "Market Maker Trap Visualizer Backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.24.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=mm_trap_visualizer"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/mm_trap_visualizer"] 